Fix search box issue when expand arrow has focus

Changes:
1. Override OnKeyPressed function in ExpandArrowView to prevent SPACE
key being handled by parent view.
2. Avoid returning true for unhandled key event in
StartPageView::OnKeyPressed.

BUG=747146

Change-Id: Ie3a195b133ba57040299deb1bbe542ed80462e1c