ui/app_list/views/expand_arrow_view.h
@@ -40,6 +40,7 @@ class ExpandArrowView : public views::CustomButton,
   // Overridden from views::View:
   gfx::Size CalculatePreferredSize() const override;
   void Layout() override;
+  bool OnKeyPressed(const ui::KeyEvent& event) override;
 
   // Overridden from views::InkDropHost:
   std::unique_ptr<views::InkDrop> CreateInkDrop() override;
